amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-directive-argument.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-directive-argument.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-argument
  Message: Cannot exist two or more arguments with name 'text'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-directive-argument.api.graphql#/declares/MyDirective/shape/default-node/property/property/text
  Property: 
  Range: 
  Location: 
